# Sistema-pro-trader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backtest/: __init__.py  backtest_engine.py  backtest_models.py  config_loader.py  data_injector.py  metrics.py  optimizer.py  out_of_sample.py  regime_analysis.py  report_generator.py  runtime.py  walk_forward.py
backtest/templates/: report.html.jinja2
backtest/templates/report_assets/: style.css
config/: backtest.yaml  brokers.yaml  indicators.yaml  news_events.yaml  risk.yaml  signals.yaml  strategies.yaml  system.yaml
core/: __init__.py  audit_journal.py  base_strategy.py  config_editor.py  config_loader.py  config_models.py  event_bus.py  event_types.py  events.py  logger.py  plugin_manager.py  snapshot_manager.py  strategy_registry.py
data/: __init__.py  asset_classifier.py  asset_detector.py  asset_types.py  base_connector.py  fallback_manager.py  feed_manager.py  models.py  normalizer.py  resampler.py  security.py  timezone_manager.py  validator.py
data/connectors/: __init__.py  crypto_connector.py  fxpro_connector.py  iol_connector.py  iqoption_connector.py  mock_connector.py  mt5_connector.py  ninjatrader_connector.py  tradingview_connector.py
execution/: __init__.py  fill_simulator.py  idempotency.py  order_manager.py  order_models.py  reconciler.py  retry_handler.py  smart_router.py
execution/adapters/: __init__.py  _live_stub.py  base_broker_adapter.py  ccxt_adapter.py  fxpro_adapter.py  iol_adapter.py  iqoption_adapter.py  mt5_adapter.py  ninjatrader_adapter.py  paper_adapter.py
indicators/: __init__.py  _utils.py  base_indicator.py  indicator_backend.py  indicator_engine.py  indicator_result.py
indicators/custom/: README.md  __init__.py
indicators/momentum/: __init__.py  cci.py  macd.py  mfi.py  rsi.py  stochastic.py  williams_r.py
indicators/patterns/: __init__.py  candlestick_patterns.py  chart_patterns.py  support_resistance.py
indicators/trend/: __init__.py  adx.py  ichimoku.py  moving_averages.py  parabolic_sar.py  supertrend.py
indicators/volatility/: __init__.py  atr.py  bollinger_bands.py  keltner_channel.py  vix_proxy.py
indicators/volume/: __init__.py  cmf.py  obv.py  volume_profile.py  vwap.py
regime/: __init__.py  market_conditions.py  news_window_detector.py  regime_detector.py  regime_models.py  session_manager.py
replay/: __init__.py  market_replayer.py  replay_controller.py  shadow_mode.py
risk/: __init__.py  drawdown_tracker.py  exposure_tracker.py  kill_switch.py  position_sizer.py  risk_manager.py  risk_models.py  slippage_model.py  stop_manager.py
scripts/: download_sample_data.py  run_backtest.py  run_module2_demo.py  run_module3_demo.py  run_module4_demo.py  run_module5_demo.py  run_optimization.py
signals/: __init__.py  anti_overtrading.py  asset_strategy_selector.py  confidence_scorer.py  ensemble.py  horizon_adapter.py  signal_engine.py  signal_explainer.py  signal_models.py  strategy_adapter.py
signals/filters/: __init__.py  correlation_filter.py  filter_result.py  news_filter.py  regime_filter.py  session_filter.py  spread_filter.py
signals/strategies/: __init__.py  _helpers.py  base.py  investment_fundamental.py  mean_reversion.py  momentum_breakout.py  range_scalp.py  scalping_reversal.py  swing_composite.py  trend_following.py
storage/: __init__.py  cache_manager.py  data_repository.py  parquet_store.py  postgres_store.py  sqlite_store.py
tests/integration/: test_backtest_full.py  test_feed_manager.py  test_indicator_pipeline.py  test_kill_switch_integration.py  test_mock_connector.py  test_paper_trading.py  test_parquet_store.py  test_regime_pipeline.py  test_replay_pipeline.py  test_risk_pipeline.py  test_signal_backvalidation.py  test_signal_pipeline.py  test_sqlite_store.py  test_walk_forward_full.py
tests/unit/: _backtest_fixtures.py  _indicator_fixtures.py  _signal_fixtures.py  test_anti_overtrading.py  test_asset_detector.py  test_atr.py  test_audit_journal.py  test_backtest_engine.py  test_backtest_models.py  test_bollinger.py  test_candlestick.py  test_confidence_scorer.py  test_config_loader.py  test_data_injector.py  test_drawdown_tracker.py  test_ensemble.py  test_event_bus.py  test_exposure_tracker.py  test_fill_simulator.py  test_filters.py  test_horizon_adapter.py  test_idempotency.py  test_indicator_engine.py  test_kill_switch.py  test_logger.py  test_macd.py  test_market_conditions.py  test_market_replayer.py  test_mean_reversion.py  test_metrics.py  test_models.py  test_moving_averages.py  test_normalizer.py  test_optimizer.py  test_order_manager.py  test_order_models.py  test_plugin_manager.py  test_position_sizer.py  test_reconciler.py  test_regime_analysis.py  (+17 more)
tests/validation/: __init__.py  generate_backtest_charts.py  generate_signal_charts.py  generate_validation_charts.py  validate_backtest.py  validate_indicators.py  validate_regime.py  validate_risk_limits.py  validate_signals.py
tests/validation/sample_data/: BTCUSD_H1_2024.parquet  EURUSD_H1_2024.parquet  GGAL_D1_2024.parquet  GLD_D1_2024.parquet  SPY_D1_2024.parquet
