[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-trading-pro"
version = "0.1.0"
description = "Auto Trading Pro core foundation, data layer, and indicator/regime engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
  "aiofiles>=23.0,<24",
  "redis>=5.0,<6",
  "structlog>=24.0,<25",
  "rich>=13.0,<14",
]

[project.optional-dependencies]
data = [
  "polars>=0.20,<1",
  "pandas>=2.2,<3",
  "httpx>=0.27,<1",
  "websockets>=12,<16",
  "aiohttp>=3.9,<4",
  "python-dotenv>=1.0,<2",
  "tzdata>=2024.1",
  "pytz>=2024.1",
  "tenacity>=8.3,<10",
  "cachetools>=5.3,<7",
]
indicators = [
  "numpy>=1.26,<3",
  "pandas-ta>=0.3.14b0,<0.4",
  "ta>=0.11,<0.12",
  "scipy>=1.13,<2",
  "statsmodels>=0.14,<0.15",
]
validation = [
  "matplotlib>=3.9,<4",
  "plotly>=5.22,<7",
  "yfinance>=0.2,<1",
]
parquet = [
  "pyarrow>=16,<18",
  "fastparquet>=2024.2,<2026",
]
storage = [
  "sqlalchemy>=2.0,<3",
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.29,<1",
]
connectors = [
  "ccxt>=4.3,<5",
]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-mock>=3.14,<4",
  "respx>=0.21,<1",
  "freezegun>=1.5,<2",
  "mypy>=1.10,<2",
  "ruff>=0.5,<1",
]
watch = [
  "watchfiles>=0.21,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = [
  "core",
  "strategies",
  "data",
  "data.connectors",
  "storage",
  "indicators",
  "indicators.trend",
  "indicators.momentum",
  "indicators.volatility",
  "indicators.volume",
  "indicators.patterns",
  "indicators.custom",
  "regime",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/validation/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
  "yaml",
  "aiofiles",
  "watchfiles",
  "polars",
  "pandas",
  "pyarrow",
  "fastparquet",
  "cachetools",
  "aiosqlite",
  "asyncpg",
  "sqlalchemy",
  "sqlalchemy.*",
  "httpx",
  "aiohttp",
  "websockets",
  "dotenv",
  "pytz",
  "tenacity",
  "redis",
  "redis.*",
  "ccxt",
  "ccxt.*",
  "MetaTrader5",
  "iqoptionapi",
  "iqoptionapi.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "indicators",
  "indicators.*",
  "regime",
  "regime.*",
]
ignore_errors = true
